# QuoteClient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  application.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/data/: datamanager.cpp  datamanager.h  marketdata.cpp  marketdata.h  stockitem.cpp  stockitem.h
src/network/: dataprovider.cpp  dataprovider.h
src/resources/: resources.qrc
src/ui/: quotechart.cpp  quotechart.h  stocktable.cpp  stocktable.h
